# Design-Patterns

decorate/: main  main.cpp
simple_factory/: factory.h  main  main.cpp  product.h  productA.h  productB.h  productC.h  readme.txt
strategy/: abstractCout.h  context.h  context_factory.h  coutA.h  coutB.h  coutC.h  main.cpp  readme.txt
tetris/: CMakeLists.txt  readme.txt
tetris/perception/: main.cpp
tetris/src/: cubePoint.cpp  cubePoint.h  cur.cpp  cur.h  game.cpp  game.h  graph.cpp  graph.h  rand.cpp  rand.h  score.cpp  score.h
